--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       <p>you have 10 attempts to guess the number.</p>
       <br>
       <form class="form">
-        <label for="guessField" id="guess">Guess the number:</label>
+        <label for="guessField" id="guess">Guess a number:</label>
         <input type="text" id="guessField" class="guessField">
         <input type="submit" id="subt" value="Submit guess" class="guessSubmit">
       </form>
 
       <div class="resultParas">
         <p>Previous Guesses: <span class="guesses"></span></p>
-        <p>Previous Guesses: <span class="lastResult">10</span></p>
+        <p>Guesses Remaining: <span class="lastResult">10</span></p>
          <p class="lowOrHi"></p>
       </div>
     </div>
